--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "husky": { "hooks": { "pre-commit": "pretty-quick --staged" },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -21,5 +22,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "husky": "^1.3.1",
+    "prettier": "1.16.4",
+    "pretty-quick": "^1.10.0"
+  }
 }
